--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head><meta http-equiv="Content-Type" content="text/html; charset=euc-jp">
         <title>Creando contraseña a usuarios</title>
 
-        <link href="{{ asset('css/estilos.css') }}" rel="stylesheet" type="text/css" />
+        <link href="{{ app.asset_path }}/css/estilos.css" rel="stylesheet" type="text/css" />
 
         <script type="text/javascript">
             var _gaq = _gaq || [];
